--- a/4_explore_inv_front.Rmd
+++ b/4_explore_inv_front.Rmd
@@ -13,7 +13,7 @@ library(ggplot2)
 ```
 
 ```{r }
-base_dir <-"/home/bibu/Workspace/crlm_cohort/output"
+base_dir <-"~/Desktop/CRLMannotations/crlm_cohort/output"
 gp_slide_fn <- paste(base_dir, "/gp_annotations_by_slide.csv", sep="")
 gp_tumor_fn <- paste(base_dir, "/gp_annotations_by_tumor.csv", sep="")
 gp_probe_fn <- paste(base_dir, "/gp_annotations_by_probe.csv", sep="")
